# ibex

./: .gitignore  CMakeLists.txt  INSTALL  install.rst  license  readme.rst
doc/: theory_manual.lyx  theory_math.nb
doc/scripts/: basis.py  plot_interpolation.py  plot_shapes.py  plot_two_region.py
sample/: readme.rst
sample/vera_pincell/: .gitignore  make_mesh.py  readme.rst  run.py  template_1b.xml  template_1e.xml
scripts/: calculate_eigenvalue.py  ibex_io.py  ibex_plot.py  mesh_functions.py  pincell_clad_functions.py  pincell_functions.py  slab_functions.py  square_functions.py
scripts/in/: rbf_disc_1.0_4.0_10_3_10_5.xml  rbf_disc_1.0_4.0_10_3_5_5.xml
scripts/mesh/: cube_functions.py  cuboid_functions.py  full_pincell_functions.py  mesh_functions.py  pincell_clad_functions.py  pincell_functions.py  pincell_scaled.py  rectangle_functions.py  slab_functions.py  square_functions.py
